--- a/estilo/home.css
+++ b/estilo/home.css
@@ -57,13 +57,14 @@ body {
 
 /* Estilo para o carrossel */
 .carousel-item{
-    height: 100vh; /* dimensiona o slider à altura do viewport */
-    background-size: cover;
-    background-position: 50% 0;
+    
+    background-position: 50% 0;   
+    width: 100%;
+    height: 850px;
  }
 /* Estilo para as imagens no carrossel */
 .carousel-item img {
-    max-height: 6000px; /* Defina a altura máxima desejada */
+    max-height: 950px; /* Defina a altura máxima desejada */
     max-width: 100%; /* Isso garantirá que a largura seja ajustada automaticamente para manter a proporção */
     margin: 0 auto; /* Centralizar a imagem horizontalmente */
     background-size: cover;
