--- a/estilo/chuteira.css
+++ b/estilo/chuteira.css
@@ -3,11 +3,12 @@
     height: 200px;
     
 }
-#btn-addcarrinho{
+#addcarrinho{
     border-color: rgba(11, 47, 88, 0.95); ;
     background-color: rgba(11, 47, 88, 0.95); 
+    border-radius: 40px;
 }
-/* Estilo para o carrossel */
+
 .vitrine-item {
     text-align: center;
 }
@@ -19,5 +20,82 @@
 
 .vitrine-item button {
     text-align: center;
-    border-radius: 20px;
+    
+}
+/* styles.css */
+/* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 1rem;
+    text-align: center;
+}
+
+main {
+    padding: 2rem;
+}
+
+.product-grid {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    flex-wrap: nowrap; /* Evita que os produtos quebrem para a próxima linha */
+    overflow-x: auto; /* Adiciona rolagem horizontal para o caso de muitos produtos */
+}
+
+.product-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 200px;
+    height:200px;
+    padding: 1rem;
+    text-align: center;
+    display: inline-block;
+}
+
+.product-card img {
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+.product-card h2 {
+    font-size: 1.5rem;
+    color: #333;
+}
+
+.product-card p {
+    color: #666;
+    font-size: 1rem;
+}
+
+.product-card .price {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+.product-card button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.product-card button:hover {
+    background-color: #555;
+}
+
+.product-card .price {
+    text-align: center;
+    font-size: 2rem;
+    margin: 5rem 0;
 }
